k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erthiscan-core
  namespace: erthiscan
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: erthiscan-core
  ports:
    - port: 443
      targetPort: 8000
      protocol: TCP
